--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +45,8 @@
   },
   "devDependencies": {
     "sass": "^1.89.2",
-    "sass-loader": "^16.0.5"
-  }
+    "sass-loader": "^16.0.5",
+    "gh-pages": "^6.0.0"
+  },
+  "homepage": "https://mario1130.github.io/Portfolio"
 }
